<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cr.ac.tec.ceap.Animals.HearSounds">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Abeja"
        android:id="@+id/btnBeeSound"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_cat_sound"
        android:id="@+id/btnCatSound"
        android:layout_below="@+id/btnBeeSound"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_dog_sound"
        android:id="@+id/btnDogSound"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_bird_sound"
        android:id="@+id/btnBirdSound"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/btnDogSound"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_cow_sound"
        android:id="@+id/btnCowSound"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnBeeSound"
        android:layout_toEndOf="@+id/btnBeeSound"
        android:layout_marginLeft="112dp"
        android:layout_marginStart="112dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_donkey_sound"
        android:id="@+id/btnDonkeySound"
        android:layout_alignTop="@+id/btnCatSound"
        android:layout_alignLeft="@+id/btnCowSound"
        android:layout_alignStart="@+id/btnCowSound" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_duck_sound"
        android:id="@+id/btnDuckSound"
        android:layout_alignTop="@+id/btnDogSound"
        android:layout_alignLeft="@+id/btnDonkeySound"
        android:layout_alignStart="@+id/btnDonkeySound" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_frog_sound"
        android:id="@+id/btnFrogSound"
        android:layout_alignTop="@+id/btnBirdSound"
        android:layout_alignRight="@+id/btnDuckSound"
        android:layout_alignEnd="@+id/btnDuckSound" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_horse_sound"
        android:id="@+id/btnHorseSound"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_lion_sound"
        android:id="@+id/btnLionSound"
        android:layout_alignTop="@+id/btnDonkeySound"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_monkey_sound"
        android:id="@+id/btnMonkeySound"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btnLionSound"
        android:layout_alignEnd="@+id/btnLionSound" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_mosquito_sound"
        android:id="@+id/btnMosquitoSound"
        android:layout_alignBottom="@+id/btnFrogSound"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_pig_sound"
        android:id="@+id/btnPigSound"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnMosquitoSound"
        android:layout_toEndOf="@+id/btnMosquitoSound"
        android:layout_marginLeft="125dp"
        android:layout_marginStart="125dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_rooster_sound"
        android:id="@+id/btnRoosterSound"
        android:layout_alignTop="@+id/btnLionSound"
        android:layout_alignLeft="@+id/btnPigSound"
        android:layout_alignStart="@+id/btnPigSound" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_sheep_sound"
        android:id="@+id/btnSheepSound"
        android:layout_above="@+id/btnBirdSound"
        android:layout_alignLeft="@+id/btnRoosterSound"
        android:layout_alignStart="@+id/btnRoosterSound" />
</RelativeLayout>
